Fixes gap issue with section component

--- a/src/styles/alignments.css
+++ b/src/styles/alignments.css
@@ -1,3 +1,7 @@
 .default-alignment {
   @apply flex flex-col gap-20 px-6 lg:px-56 2xl:px-96 w-full;
 }
+
+.section-container {
+  @apply flex flex-col gap-8;
+}
